--- a/TODO
+++ b/TODO
@@ -1,2 +1,6 @@
 1. Компаратор для добавления инфы в корень проекта
-2. Написать тесты
+2. Починить required (не всегда добавляет все что нужно) (срабатывает в псевдо-структурах хотя не должен) 
+3. Проверить как будет вести себя опредилитель псевдо-массивов при дополнении текущего псевдо-массива (если неккоректно - добавляем логику атрибута-блокировки)
+
+4. Написать тесты
+5. Написать документацию
